# contract

./: README.md
contract-let/: README.md  hardhat.config.js  package-lock.json  package.json
contract-let/contracts/coin/: AppleCoin.sol
contract-let/ignition/deployments/chain-137/: deployed_addresses.json  journal.jsonl
contract-let/ignition/deployments/chain-137/artifacts/: CounterModule#Counter.dbg.json  CounterModule#Counter.json
contract-let/ignition/modules/coin/: AppleCoin.js  CherryCoin.js
contract-let/scripts/AppleCoin/: mint.js
contract-let/scripts/Counter/: add.js  cnt.js  show.js  sub.js
eth-contract-let/: .env.sample  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
eth-contract-let/contracts/: Counter.sol
eth-contract-let/contracts/coin/: CherryCoin.sol
eth-contract-let/contracts/gem/: AntGem.sol
eth-contract-let/ignition/modules/: Counter.js
eth-contract-let/ignition/modules/gem/: AntGem.js
eth-contract-let/scripts/AppleCoin/: mint.js
eth-contract-let/scripts/Counter/: add.js  cnt.js  show.js  sub.js
eth-contract-let/test/: CounterTest.js
near-contract-let/: Cargo.toml
