[package]
name = "near-contract-let"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.2", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.2", features = ["unit-testing"] }
near-workspaces = { version = "0.10", features = ["unstable"] }
tokio = { version = "1.38", features = ["full"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
